noissue - fix word wrap on url on collection page

--- a/src/layout/CollectionPage/CollectionPage.scss
+++ b/src/layout/CollectionPage/CollectionPage.scss
@@ -11,6 +11,15 @@
   .collections-details {
     width: 360px;
     padding: 20px 40px;
+
+    h2 {
+      word-break: break-all;
+    }
+
+    .dataset-url {
+      word-break: break-all;
+    }
+
     button {
       background: none;
       border: 1px solid #336699;
